# Echocardiogram-OCR-analysis

./: ...  .gitignore  .venv  91243943_0007.dcm  ABSOLLUUTTTTTTTTTTTNOGTEMAKENNNNNNNNNNNN.txt  AGENTS.md  OCR_REDESIGN_PLAN.md  README.md  SESSION_NOTES.md  ab_test_results.csv  labels.md  latest_findings.txt  mainpipelineplan.md  pyproject.toml  qt_viewer.py  read_dicom.py  tmp_debug_resume.py  validation_labels.md  workplan.md
.cursor/: settings.json
app/: __init__.py  main.py  repo_paths.py
artifacts/: eval_hybrid_paddle_after_canonicalization.md  eval_hybrid_paddle_after_tuning_pass.md  glm_ocr_eval_exact_lines.json
cineviewer/: __init__.py  dicom_data.py  viewer.py
docs/: char_fallback_review.md  dicom_to_extraction_pipeline.md  echo_ocr_audit_protocol.md  echo_ocr_pipeline_presentation.md  echo_ocr_scale_execution_plan.md  headless_batch_labeling.md  mamba_environments.md  ocr_redesign_run_log.jsonl  ocr_redesign_training_plan.md  preprocess_sweep.md  rerun_fail3_preprocess_sweep.md  validation_failure_sweep.md
envs/: dl.yml  easyocr_eval.yml  glm_ocr.yml  gotocr.yml  paddleocr_eval.yml  surya.yml
labels/: exact_lines.json  labels.json
notebooks/: echo_ocr_pipeline_walkthrough.ipynb  full_match_char_dataset_builder.ipynb  source_video_matcher_exam_walkthrough.ipynb  validation_blob_helper_count_mismatch_compare.ipynb  validation_failure_walkthrough.ipynb  validation_whole_blob_hybrid_compare.ipynb  validation_whole_blob_no_segmenter.ipynb  vertical_slice_debug_91243943_0007.ipynb
scripts/: bootstrap_headless_env.sh  prepare_validation_walkthrough.sh  (+2 more)
(+558 files in other folders)
